--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h2>As-tu vu la quenouille</h2>
-        <p> Salut c'est françois le français</p>
+        <p> Salut c'est françois le caca</p>
 </body>
 </html>
